# pytefas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: canary.yml  test.yml
examples/: basic_usage.py
pytefas/: __init__.py  _ratelimit.py  client.py  exceptions.py  schema.py
test/: test_canary.py
tests/: test_canary.py  test_client.py  tests_client.py
